sfdx-src/main/default/objects/PLM_Process__c/PLM_Process__c.object-meta.xml
<CustomObject>
    <description>PLM Process type object is top level metadata object define properties at process type level.</description>
    <label>PLM Process</label>
    <nameField>
        <label>PLM Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PLM Process</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>