sfdx-src/main/default/objects/PLM_Process__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this process type active?</description>
    <inlineHelpText>Is this process type active?</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>