sfdx-src/main/default/objects/PLM_Process__c/fields/PLM_Parent_Process__c.field-meta.xml
<CustomField>
    <fullName>PLM_Parent_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PLM Parent Process</label>
    <referenceTo>PLM_Process__c</referenceTo>
    <relationshipLabel>PLM Process</relationshipLabel>
    <relationshipName>PLM_ParentProcess2Process</relationshipName>
    <type>Lookup</type>
</CustomField>