sfdx-src/main/default/objects/PLM_Process__c/fields/Process_Description__c.field-meta.xml
<CustomField>
    <fullName>Process_Description__c</fullName>
    <description>briefly describe what this process type is.</description>
    <inlineHelpText>briefly describe what this process type is.</inlineHelpText>
    <label>Process Description</label>
    <type>TextArea</type>
</CustomField>