sfdx-src/main/default/objects/PLM_Process__c/fields/Process_Owner__c.field-meta.xml
<CustomField>
    <fullName>Process_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>select the contact who owns this process type</description>
    <inlineHelpText>select the contact who owns this process type</inlineHelpText>
    <label>Process Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>PLM_Process_Types</relationshipName>
    <type>Lookup</type>
</CustomField>